# UberDuckAPI

./: README.md  colab_example.py  example.py  main.py  pyproject.toml  requirements.txt  setup.py
uberduckapi/: __init__.py
