[tool.poetry]
name = "uberduckapi"
version = "0.1.2"
description = "Python wrapper for uberduck API"
readme = "README.md"
homepage = "https://github.com/CupOfGeo/uberduckapi"
repository = "https://github.com/CupOfGeo/uberduckapi"
authors = ["George <mazzeogeorge@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
polling = "^0.3.2"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
"Uberduck" = "https://uberduck.ai"

#poetry publish -r testpypi